--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Jacqueline's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,13 +28,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/Me professional (2).jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>Jacqueline Mason</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>The online community knows me as Rookie Behaviour. Welcome to my portfolio! I'm a <strong>Junior Software Developer </strong>
+								in Middletown, Ohio that loves gaming and streaming in my free time.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -82,36 +83,36 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Here’s some recent projects I made.</h2>
+						<p>Click on a project below.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jjmason/full/ExgrMGJ" target="_blank" class="image featured"><img src="images/Drum Machine.PNG" alt="" /></a>
+								<h3><a href="https://codepen.io/jjmason/full/ExgrMGJ" target="_blank">Drum Machine</a></h3>
+								<p>Fun React app.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jjmason/full/xxEMEvr" target="_blank" class="image featured"><img src="images/Markdown Previewer.PNG" alt="" /></a>
+								<h3><a href="https://codepen.io/jjmason/full/xxEMEvr" target="_blank">Markdown Previewer</a></h3>
+								<p>Take me for a spin.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jjmason/full/rNMyWPW" target="_blank"class="image featured"><img src="images/Survey.PNG" alt="" /></a>
+								<h3><a href="https://codepen.io/jjmason/full/rNMyWPW" target="_blank">Survey Form</a></h3>
+								<p>Beautiful custom survey form.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://jjm-stock-price-checker.glitch.me/" target="_blank" class="image featured"><img src="images/Stock price checker.PNG" alt="" /></a>
+								<h3><a href="https://jjm-stock-price-checker.glitch.me/" target="_blank">Stock Price Checker</a></h3>
+								<p>Price, like and compare NASDAQ stock.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +131,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Want links to more projects?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -140,8 +141,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Like what you see? Contact me!</h2>
+						<p>I'm interetsed in career opportunities and collaboration projects.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -172,13 +173,11 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.freecodecamp.org/jjmason" class="icon brands fab fa-free-code-camp"><span class="label">FCC</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/rookiebehaviour" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://codepen.io/jjmason" class="icon brands fab fa-codepen"><span class="label">Codepen</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
@@ -196,7 +195,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>2021&copy; Jacqueline Mason. All rights reserved.</li>
 						</ul>
 					</footer>
 				</div>
