--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jjmason/full/zYKXxgG" target="_blank"class="image featured"><img src="images/JS Calculator.PNG" alt="" /></a>
+								<h3><a href="https://codepen.io/jjmason/full/zYKXxgG" target="_blank">React.JS Calculator</a></h3>
+								<p>Beautiful JS calculator using React.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jjmason/full/mdWgKZg" target="_blank"class="image featured"><img src="images/BarChart.PNG" alt="" /></a>
+								<h3><a href="https://codepen.io/jjmason/full/mdWgKZg" target="_blank">D3.JS BarChart</a></h3>
+								<p>Data visualization bar chart.</p>
 							</article>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<form method="post" action="#" enctype="text/plain">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -178,17 +178,6 @@
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/rookiebehaviour" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://codepen.io/jjmason" class="icon brands fab fa-codepen"><span class="label">Codepen</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
 							</ul>
 							<hr />
 						</div>
